--- a/Algebra/platformio.ini
+++ b/Algebra/platformio.ini
@@ -12,3 +12,8 @@
 platform = atmelavr
 board = uno
 framework = arduino
+
+;build_unflags =-std=gnu++11
+build_flags = -std=c++11
+;build_flags = -std=c++14
+;build_flags =-std=c++17
