--- a/Algebra/platformio.ini
+++ b/Algebra/platformio.ini
@@ -12,8 +12,16 @@
 platform = atmelavr
 board = uno
 framework = arduino
-
-;build_unflags =-std=gnu++11
-build_flags = -std=c++11
-;build_flags = -std=c++14
-;build_flags =-std=c++17
+;
+; build_unflags = -std=gnu++11
+; build_unflags = -std=c++11
+;
+build_flags = -std=gnu++11
+; build_flags = -std=c++11
+; build_flags = -std=c++14
+; build_flags =-std=c++17
+;
+; build_src_filter uses +<*> as wild card for folders placed inside the src-folder..., 
+; all folders have to be accounted where + indicates active folders, - indiactes ignor folders...
+build_src_filter = +<*> +<MainMan/> -<MainDied/> -<TESTS/>
+upload_port = /dev/ttyACM0
