--- a/Algebra/platformio.ini
+++ b/Algebra/platformio.ini
@@ -22,6 +22,7 @@ build_flags = -std=gnu++11
 ; build_flags =-std=c++17
 ;
 ; build_src_filter uses +<*> as wild card for folders placed inside the src-folder..., 
-; all folders have to be accounted where + indicates active folders, - indiactes ignor folders...
+;   all files placed in folders and in turn have to be accounted where + indicates active 
+;   folders, - indicates ignore folders...
 build_src_filter = +<*> +<MainMan/> -<MainDied/> -<TESTS/>
 upload_port = /dev/ttyACM0
