--- a/Algebra/platformio.ini
+++ b/Algebra/platformio.ini
@@ -21,7 +21,7 @@ build_flags = -std=gnu++11
 ; build_flags = -std=c++14
 ; build_flags =-std=c++17
 ;
-; build_src_filter uses +<*> as wild card used for multiple ***main.cpp*** files placed in 
+; build_src_filter uses +<*> as wild card used for multiple main.cpp files placed in 
 ;   separate folders inside the platformIO src-folder..., all files placed in these folders 
 ;   and in turn have to be accounted where + indicates active folders, - indicates ignore folders...
 ;   There is no main.cpp file in the TESTS folder...
