--- a/Algebra/platformio.ini
+++ b/Algebra/platformio.ini
@@ -21,9 +21,7 @@ build_flags = -std=gnu++11
 ; build_flags = -std=c++14
 ; build_flags =-std=c++17
 ;
-; build_src_filter uses +<*> as wild card used for multiple main.cpp files placed in 
-;   separate folders inside the platformIO src-folder..., all files placed in these folders 
-;   and in turn have to be accounted where + indicates active folders, - indicates ignore folders...
-;   There is no main.cpp file in the TESTS folder...
-build_src_filter = +<*> +<MainMan/> -<MainDied/> -<TESTS/>
+; build_src_filter uses +<*> as wild card for folders placed inside the src-folder..., 
+; all folders have to be accounted where + indicates the active folder, - indiactes to ignor folders...
+build_src_filter = +<*> +<MainMan/> -<TESTS/>
 upload_port = /dev/ttyACM0
